--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary: #ff298c;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,6 +23,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 18px;
+  line-height: 1.5;
 }
 
 * {
@@ -38,5 +41,11 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+  }
+}
+
+@media(min-width: 600px) {
+  body {
+    font-size: 22px;
   }
 }
