--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,11 +1,19 @@
-import styled from 'styled-components';
+.mainContent {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  height: 100%;
+  margin: auto;
+  width: 80%;
+  align-items: center;
+  padding: 3em 0;
+}
 
-import Link from 'next/link';
-
-export const CustomLink = styled(Link)`
+.cta {
   background-color: var(--background);
   border-radius: 30px;
   border: 1px solid var(--primary);
+  cursor: pointer;
   margin: 0 auto;
   padding: 24px;
   transition: transform 250ms, background-color 250ms ease;
@@ -14,4 +22,4 @@ export const CustomLink = styled(Link)`
     background-color: var(--primary);
     transform: translateY(-10px);
   }
-`;
+}
