--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,25 +1,26 @@
 .mainContent {
+  align-items: center;
   display: flex;
   flex-direction: column;
   gap: 2em;
   height: 100%;
   margin: auto;
-  width: 80%;
-  align-items: center;
   padding: 3em 0;
+  width: 80%;
 }
 
 .cta {
   background-color: var(--background);
   border-radius: 30px;
   border: 1px solid var(--primary);
-  cursor: pointer;
-  margin: 0 auto;
+  display: flex;
+  margin: 24px auto 0;
+  max-width: 320px;
   padding: 24px;
   transition: transform 250ms, background-color 250ms ease;
+}
 
-  &:hover {
-    background-color: var(--primary);
-    transform: translateY(-10px);
-  }
+.cta:hover {
+  background-color: var(--primary);
+  transform: translateY(-10px);
 }
