--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,26 +1,30 @@
 .mainContent {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  gap: 2em;
-  height: 100%;
-  margin: auto;
-  padding: 3em 0;
-  width: 80%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    height: 100%;
+    margin: auto;
+    padding: 3em 0;
+    width: 80%;
 }
 
 .cta {
-  background-color: var(--background);
-  border-radius: 30px;
-  border: 1px solid var(--primary);
-  display: flex;
-  margin: 24px auto 0;
-  max-width: 320px;
-  padding: 24px;
-  transition: transform 250ms, background-color 250ms ease;
+    background-color: var(--color-background);
+    border: 1px solid var(--color-primary);
+    color: var(--color-primary-text);
+    display: flex;
+    margin: 24px auto 0;
+    max-width: 320px;
+    padding: 24px;
+    transition: transform 250ms, background-color 250ms ease;
 }
 
 .cta:hover {
-  background-color: var(--primary);
-  transform: translateY(-10px);
+    border: 1px solid var(--color-primary);
+    transform: translateY(-10px);
+}
+
+html.dark .cta:hover {
+    background-color: transparent;
 }
