--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,51 +1,82 @@
+/* Light Theme (default in :root) */
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-  --primary: #ff298c;
+    --color-background: #fff1e5;
+    --color-foreground: #080808;
+
+    --color-primary: #ff298c;
+
+    --color-primary-text: #242121;
+    --color-secondary-text: #404040;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+/* Dark Theme */
+body.dark {
+    --color-background: #080808;
+    --color-foreground: #d2d2d2;
+
+    --color-primary-text: #bbbbbb;
+    --color-secondary-text: #858585;
+
+    color-scheme: dark;
+}
+
+body.light {
+    --color-background: #fff1e5;
+    --color-foreground: #080808;
+
+    --color-primary-text: #242121;
+    --color-secondary-text: #404040;
+
+    color-scheme: light;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-size: 18px;
-  line-height: 1.5;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    background-color: var(--color-background);
+    color: var(--color-secondary-text);
+    font-family: var(--font-geist-sans), Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: var(--color-primary-text);
+}
+
+main {
+    padding: 24px;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+a,
+button {
+    cursor: pointer;
 }
 
-@media(min-width: 600px) {
-  body {
-    font-size: 22px;
-  }
+@media (min-width: 600px) {
+    body {
+        font-size: 22px;
+    }
 }
