--- a/src/app/products/page.module.css
+++ b/src/app/products/page.module.css
@@ -1,33 +1,15 @@
 .cardList {
+    align-items: center;
     display: flex;
-    font-family: var(--font-geist-mono);
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex-wrap: wrap;
+    gap: var(--spacing-24) 0;
     line-height: 1.5;
     list-style-position: inside;
     list-style: none;
     margin: 0;
     padding-left: 0;
-    flex-wrap: wrap;
-    gap: 5em;
-    flex-direction: column;
-}
-
-.cardItem {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    /* cursor: pointer; */
-    position: relative;
-}
-
-.cardLink {
-    &:after {
-        content: '';
-        bottom: 0;
-        left: 0;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
 }
 
 .productImage {
@@ -39,11 +21,7 @@
 @media (min-width: 768px) {
     .cardList {
         flex-direction: row;
-        gap: 0 14px;
+        gap: var(--spacing-32);
         justify-content: center;
-    }
-
-    .cardItem {
-        flex-basis: 240px;
     }
 }
