--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -4,7 +4,7 @@
     color: var(--color-background);
     display: flex;
     flex-direction: column;
-    gap: 14px;
+    gap: var(--spacing-14);
     justify-content: center;
-    padding: 14px 0;
+    padding: var(--spacing-14) 0;
 }
